Overlapping menu and menu on mouseover fixed

--- a/components/header-navigation/header-navigation.less
+++ b/components/header-navigation/header-navigation.less
@@ -2,9 +2,10 @@
 
 
 .applelogo{
-  height: 30px;
-  width: 30px;
-  margin-top: -9px;
+  height: 20px;
+  width: 20px;
+  margin-top: -6px;
+  margin-right: 8px;
   position: relative;
 }
 
@@ -16,7 +17,7 @@
 }
 
 .navbar-brand{
-  position: absolute;
+ //position: absolute;
   left: 15px;
   padding: 15px 0px !important;
   margin-left: -12px !important;
@@ -215,4 +216,63 @@
     right: 62px;
     font-size:9px;
   }
+}
+
+
+/*.sidebar-nav {
+  padding: 9px 0;
+}
+
+.dropdown-menu .sub-menu {
+  left: 100%;
+  position: absolute;
+  top: 0;
+  visibility: hidden;
+  margin-top: -1px;
+}
+
+.dropdown-menu li:hover .sub-menu {
+  visibility: visible;
+}
+
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+.dropdown-menu.hide {
+  display: none;
+}
+
+.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+  margin-top: 0;
+}*/
+
+/*
+.navbar .sub-menu:before {
+  border-bottom: 7px solid transparent;
+  border-left: none;
+  border-right: 7px solid rgba(0, 0, 0, 0.2);
+  border-top: 7px solid transparent;
+  left: -7px;
+  top: 10px;
+}
+.navbar .sub-menu:after {
+  border-top: 6px solid transparent;
+  border-left: none;
+  border-right: 6px solid #fff;
+  border-bottom: 6px solid transparent;
+  left: 10px;
+  top: 11px;
+  left: -6px;
+}*/
+.navbar-nav > li > a {
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+.container {
+ // padding-right: 25px;
+  padding-left: 15px;
+  /*margin-right: auto;*/
+  margin-left : inherit;
 }
